# networkstats

./: NetworkStats.spec  README.md  main.py  pyproject.toml  requirements.txt  setup.py
.cursor/rules/: project-structure-and-uv-conventions.mdc  project.mdc  pytest.mdc  python-app.mdc  python.mdc  run-tests.mdc
.github/workflows/: build-and-upload.yml  tag-and-draft-release.yml
docs/spec/: database.md  index.md  menubar.md  network-monitoring.md  packaging-deployment.md  settings-gui.md  statistics-visualization.md
docs/spec/database/: current-implementation-sqlite.md  data-retention-and-archival.md  future-enhancements.md  future-implementation-duckdb.md  index.md  performance-benchmarks.md  query-optimization.md  testing-strategy.md
docs/spec/menubar/: accessibility.md  current-implementation.md  design-principles.md  future-enhancements.md  future-implementation.md  index.md  integration-points.md  performance-optimization.md  testing-strategy.md
docs/spec/network-monitoring/: current-implementation.md  error-handling.md  future-enhancements.md  future-implementation-native-python-ping.md  index.md  logging-architecture.md  monitoring-engine-architecture.md  performance-optimization.md  testing-strategy.md
docs/spec/packaging-deployment/: auto-update-system.md  current-implementation.md  dmg-creation.md  future-enhancements.md  github-actions-automation.md  index.md  installation-methods.md  macos-application-bundle.md  security-considerations.md  testing-deployment.md  universal-binary-support.md  version-management.md
docs/spec/settings-gui/: architecture.md  configuration-persistence.md  design-principles.md  future-enhancements.md  index.md  tab-specifications.md  testing.md  validation-and-error-handling.md
docs/spec/statistics-visualization/: current-implementation.md  design-principles.md  future-enhancements.md  future-implementation.md  index.md  performance-optimization.md
networkstats/: cli.py  config.py  menubar.py  monitor.py  storage.py
networkstats/gui/: window.py
scripts/: build_app.sh  clean_build.sh  convert-spec.py
tests/: test_cli.py  test_config.py  test_gui.py  test_monitor.py  test_storage.py
