[project]
name = "networkstats"
version = "0.1.0"
description = "Menu-bar uptime monitor with Toga stats window"
authors = [{name="Your Name"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "rumps",
  "toga>=0.4.3",
  "polars",
  "plotly",
  "typer",
  "tomli_w",
]

[project.scripts]
netuptime = "networkstats.cli:app"

[tool.pytest.ini_options]
addopts = ""
pythonpath = "."

[tool.uv]
package = true

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
test = [
  "pytest",
  "pytest-asyncio"
]
