[tool.poetry]
name = "networkstats"
version = "0.1.0"
description = "Network uptime monitor CLI and GUI app."
authors = ["Your Name <your@email.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
typer = "0.16.0"
asyncio = "3.4.3"
polars = "1.31.0"

[tool.poetry.group.dev.dependencies]
pytest = "8.4.1"
pytest-asyncio = "1.0.0"
black = "25.1.0"
ruff = "0.12.2"
mypy = "1.16.1"

[build-system]
requires = [
    "poetry-core>=1.0.0",
    "setuptools",
    "wheel",
    "py2app"
]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
networkstats = "networkstats.cli:app"
