[build-system]
requires = ["poetry-core>=1.0.0", "setuptools<81"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "networkstats"
version = "0.1.0"
description = "A tool for monitoring and displaying network statistics."
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/yourusername/network-stats"
homepage = "https://github.com/yourusername/network-stats"
keywords = ["network", "statistics", "monitor"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
packages = [{ include = "networkstats" }]
include = ["README.md", "LICENSE"]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
setuptools = "<81"
typer = "0.16.0"
asyncio = "3.4.3"
polars = "1.31.0"
py2app = "^0.28.8"
plotly = "^6.2.0"
tomli-w = "^1.2.0"
pyobjc = "^11.1"

[tool.poetry.group.dev.dependencies]
pytest = "8.4.1"
pytest-asyncio = "1.0.0"
black = "25.1.0"
ruff = "0.12.2"
mypy = "1.16.1"
pyinstaller = "^6.0.0"
markdown-it-py = "^3.0.0"
click = "^8.1.8"
pyyaml = "^6.0.2"

[tool.poetry.scripts]
networkstats = "networkstats.cli:app"
